kubernetes-configuration/demo-k8s-frontend-backend/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-backend-demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-backend-demo-app
  template:
    metadata:
      labels:
        app: k8s-backend-demo-app
    spec:
      containers:
        - name: k8s-backend-demo-app
          image: pavelkostal/k8s-backend-demo-app:latest
          ports:
            - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: k8s-backend-demo-app
spec:
  selector:
    app: k8s-backend-demo-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080  # Expose the service on port 30080 on the node
  type: NodePort
