kubernetes-configuration/demo-k8s-frontend-backend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-frontend-demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-frontend-demo-app
  template:
    metadata:
      labels:
        app: k8s-frontend-demo-app
    spec:
      containers:
        - name: k8s-frontend-demo-app
          image: pavelkostal/k8s-frontend-demo-app:latest
          ports:
            - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: k8s-frontend-demo-app
spec:
  selector:
    app: k8s-frontend-demo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
