kubernetes-configuration/demo-k8s-frontend-backend/ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"  # Add this line
spec:
  rules:
    - host: backend.192.168.1.240.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-backend-demo-app
                port:
                  number: 8080
