kubernetes-configuration/demo-k8s-frontend-backend/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  rules:
    - host: frontend.192.168.1.240.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-frontend-demo-app
                port:
                  number: 80
