kubernetes-configuration/demo-k8s-frontend-backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  rules:
    - host: backend.192.168.1.240.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-backend-demo-app
                port:
                  number: 8080
